# EiCOS

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: eicos.hpp  eicos_LDBL.hpp  eicos_MP.hpp  printing.hpp  timing.hpp
src/: eicos.cpp  eicos_LDBL.cpp  eicos_MP.cpp  run.cpp
test/: ecos.h  ecostester.cpp
